tests/neg-custom-args/captures/delayedRunops.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/delayedRunops.scala:15:4 ---------------------------------
15 |    () => // error
   |    ^
   |    Found:    () ->{ops*} Unit
   |    Required: () -> Unit
16 |      val ops1 = ops
17 |      runOps(ops1)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/delayedRunops.scala:27:4 ---------------------------------
27 |    () => // error
   |    ^
   |    Found:    () ->{ops*} Unit
   |    Required: () -> Unit
28 |      val ops1: List[() ->{ops*} Unit] = ops
29 |      runOps(ops1)
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/delayedRunops.scala:23:13 -----------------------------------------------------
23 |      runOps(ops1)  // error
   |             ^^^^
   |             Local reach capability ops* leaks into capture scope of method delayedRunOps2.
   |             To allow this, the parameter ops should be declared with a @use annotation
-- Error: tests/neg-custom-args/captures/delayedRunops.scala:22:16 -----------------------------------------------------
22 |      val ops1: List[() => Unit] = ops // error
   |                ^^^^^^^^^^^^^^^^
   |                Separation failure: value ops1's type List[() => Unit] hides non-local parameter ops
